# taskmanager-rust

./: Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs  models.rs
tests/: client_test.rs
