[package]
name = "taskmanager-sdk"
version = "0.2.0"
edition = "2021"
description = "SDK for Task Manager API"
license = "MIT"
repository = "https://github.com/hdresearch/rust-sdk"
keywords = ["vers", "sdk", "api", "vm"]
categories = ["api-bindings"]

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "1"
